# FrameDemo

./: .gitignore  CMakeLists.txt  README.md  build.gradle  custom.gradle  gradle.properties
app/: build.gradle  keystore.jks
app/src/androidTest/java/com/rcb/financialservice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rcb/financialservice/application/: RcbApplication.java
app/src/main/java/com/rcb/financialservice/bindingadapter/: BindingAdapter.java  CommonAdapter.kt
app/src/main/java/com/rcb/financialservice/crash/: CrashHandler.java
app/src/main/java/com/rcb/financialservice/net/: Client2Server.java  Constants.kt  CustomResponse.java  HttpCallBack.java  HttpClientManager.java  HttpManager.java  LoggingInterceptor.java  OkHttpRequest.java
app/src/main/java/com/rcb/financialservice/net/download/: DownLoadCallBack.java  DownloadInterceptor.java  DownloadListener.java  DownloadResponseBody.java
app/src/main/java/com/rcb/financialservice/net/netretrofit/: ApiClient.java  ApiService.java
app/src/main/java/com/rcb/financialservice/net/netretrofit/body/: FindFaceBody.java
app/src/main/java/com/rcb/financialservice/net/netretrofit/entity/: BaseEntity.java  FindFaceEntity.java
app/src/main/java/com/rcb/financialservice/ui/activity/: EmptyActivity.kt  LauncherActivity.kt  MainActivity.kt
app/src/main/java/com/rcb/financialservice/ui/base/: BaseActivity.kt  BaseFragment.java
app/src/main/java/com/rcb/financialservice/ui/event/: CompentEvent.kt  EventHandler.java  OwnCrashHandler.kt  WorkerClickEvent.kt
app/src/main/java/com/rcb/financialservice/ui/fragment/: AssistantFragment.kt  LifeFragment.kt  MainFragment.kt  MineFragment.kt
app/src/main/java/com/rcb/financialservice/utils/: DateUtils.kt  DensyUtils.kt  LogUtils.kt
app/src/main/java/com/rcb/financialservice/widget/: AutoRecyclerView.kt  StaggerdRecyclerViewItemDecoration.java  TitleBar.kt
app/src/main/java/com/rcb/financialservice/widget/transformation/: CircleTransformation.java  RoundCornerTransformation.java
app/src/main/res/layout/: activity_main.xml  activity_maind.xml  base_activity.xml  layout_title.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
